Feat: config 저장소에 데이터 암호화해서 저장하기 위해 필요한 대칭키 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,10 @@ repository:
 password:
   id: db1d5af2be7347c58fa75b500e882dab
 
+encrypt:
+  id: 4daedecda3764a75a58614ea0d577444
+  key: ${encrypt-key}
+
 # config server
 spring:
   application:
