Feat: spring cloud bus(amqp), monitor 의존성 추가 config repository에 있는 설정 파일이 수정되면 webhook을 통해 config server는 자동으로 변경 사항 감지 spring cloud bus를 통해 메시지 브로커(RabbitMQ)에 변경 이벤트 전파

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,12 @@ spring:
   application:
     name: config-server
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
   cloud:
     config:
       server:
@@ -25,6 +31,15 @@ spring:
           default-label: main
           ignore-local-ssh-settings: true
           private-key: ${config.repository.key}
+
+    bus:
+      enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
 
 ---
 spring:
